--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "just-tech-news",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +11,16 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.20.1"
-  }
+    "sequelize": "^6.21.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/garcia3325/just-tech-news.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/garcia3325/just-tech-news/issues"
+  },
+  "homepage": "https://github.com/garcia3325/just-tech-news#readme",
+  "description": ""
 }
